--- a/TFG_Projects_APP_Frontend/Pages/LoginPage.xaml
+++ b/TFG_Projects_APP_Frontend/Pages/LoginPage.xaml
@@ -6,6 +6,7 @@
     xmlns:dtos="clr-namespace:TFG_Projects_APP_Frontend.Entities.Dtos.Users"
     xmlns:models="clr-namespace:TFG_Projects_APP_Frontend.Entities.Models"
     xmlns:pageModels="clr-namespace:TFG_Projects_APP_Frontend.PageModels"
+    xmlns:properties="clr-namespace:TFG_Projects_APP_Frontend.Properties"
     Title="Login"
     x:DataType="pageModels:LoginPageModel"
     BackgroundColor="#f5f5f5"
@@ -24,7 +25,7 @@
                 FontAttributes="Bold"
                 FontSize="32"
                 HorizontalOptions="Center"
-                Text="Welcome!" />
+                Text="{x:Static properties:Resources.LoginPageMessage}" />
 
             <Button Command="{Binding DirectLoginCommand}" Text="Debug Login" />
 
@@ -32,14 +33,14 @@
                 <Entry
                     x:Name="IP"
                     BackgroundColor="White"
-                    Placeholder="Server IP"
+                    Placeholder="{x:Static properties:Resources.ServerIPLabel}"
                     Text="{Binding Route, Mode=TwoWay}"
                     WidthRequest="80" />
 
                 <Entry
                     x:Name="Port"
                     BackgroundColor="White"
-                    Placeholder="Port"
+                    Placeholder="{x:Static properties:Resources.PortLabel}"
                     Text="{Binding Port, Mode=TwoWay}"
                     WidthRequest="60" />
                 <Button
@@ -49,7 +50,7 @@
                     CornerRadius="10"
                     FontAttributes="Bold"
                     IsVisible="{Binding ShowTestButton}"
-                    Text="Test connection"
+                    Text="{x:Static properties:Resources.TestConnectionButton}"
                     TextColor="White"
                     WidthRequest="130" />
                 <VerticalStackLayout
@@ -74,7 +75,7 @@
                 Command="{Binding ChangeRouteCommand}"
                 CornerRadius="10"
                 FontAttributes="Bold"
-                Text="Save API location"
+                Text="{x:Static properties:Resources.SaveApiLocationButton}"
                 TextColor="White" />
             <Entry
                 x:Name="Username"
@@ -86,21 +87,21 @@
                 x:Name="Email"
                 BackgroundColor="White"
                 Keyboard="Email"
-                Placeholder="Email"
+                Placeholder="{x:Static properties:Resources.EmailLabel}"
                 Text="{Binding Email, Mode=TwoWay}" />
 
             <Entry
                 x:Name="Password"
                 BackgroundColor="White"
                 IsPassword="True"
-                Placeholder="Password"
+                Placeholder="{x:Static properties:Resources.PasswordLabel}"
                 Text="{Binding Password, Mode=TwoWay}" />
 
             <HorizontalStackLayout Spacing="-13" VerticalOptions="Center">
                 <CheckBox IsChecked="{Binding RememberMe}" VerticalOptions="Center" />
                 <Label
                     FontSize="14"
-                    Text="Remember me"
+                    Text="{x:Static properties:Resources.RememberMeLabel}"
                     TextColor="Black"
                     VerticalOptions="Center" />
             </HorizontalStackLayout>
@@ -111,7 +112,7 @@
                 Command="{Binding LoginCommand}"
                 CornerRadius="10"
                 FontAttributes="Bold"
-                Text="Login"
+                Text="{x:Static properties:Resources.LoginButton}"
                 TextColor="White" />
 
             <Button
@@ -120,7 +121,7 @@
                 Command="{Binding RegisterCommand}"
                 CornerRadius="10"
                 FontAttributes="Bold"
-                Text="Register"
+                Text="{x:Static properties:Resources.RegisterButton}"
                 TextColor="White" />
 
             <ActivityIndicator
