--- a/TFG_Projects_APP_Frontend/Pages/AppSettingsPage.xaml
+++ b/TFG_Projects_APP_Frontend/Pages/AppSettingsPage.xaml
@@ -3,7 +3,6 @@
     x:Class="TFG_Projects_APP_Frontend.Pages.AppSettingsPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:models="clr-namespace:TFG_Projects_APP_Frontend.Entities.Models"
     xmlns:pageModels="clr-namespace:TFG_Projects_APP_Frontend.PageModels"
     xmlns:properties="clr-namespace:TFG_Projects_APP_Frontend.Properties"
     xmlns:utils="clr-namespace:TFG_Projects_APP_Frontend.Utils"
@@ -11,14 +10,16 @@
     x:DataType="pageModels:AppSettingsPageModel"
     NavigationPage.HasNavigationBar="False"
     Shell.NavBarIsVisible="False">
-    <ScrollView>
-        <VerticalStackLayout Padding="30,0" Spacing="25">
-
+    <ScrollView Padding="30,0">
+        <VerticalStackLayout Spacing="25">
             <Label
                 SemanticProperties.HeadingLevel="Level1"
                 Style="{StaticResource Headline}"
                 Text="{x:Static properties:Resources.TitleAppSettingsPage}" />
-            <Label Text="{x:StaticResource properties:Resources.LanguageLabel}"/>
+            <Label
+                FontAttributes="Bold"
+                FontSize="32"
+                Text="{x:Static properties:Resources.LanguageLabel}" />
             <CollectionView
                 ItemsSource="{Binding Languages}"
                 SelectedItem="{Binding SelectedLanguage}"
